Fixed comments, round 1.

--- a/akka-remote/src/main/resources/reference.conf
+++ b/akka-remote/src/main/resources/reference.conf
@@ -237,6 +237,9 @@ akka {
     # address as failed. This configuration option controls how much time should
     # be elapsed before reattempting a new connection. While the address is
     # gated, all messages sent to the address are delivered to dead-letters.
+    # Since this setting limits the rate of reconnects setting it to a
+    # very short interval (i.e. less than a second) may result in a storm of
+    # reconnect attempts.
     retry-gate-closed-for = 5 s
 
     # After catastrophic communication failures that result in the loss of system
@@ -244,7 +247,7 @@ akka {
     # quarantined to prevent inconsistent behavior.
     # This setting controls how long the Quarantine marker will be kept around
     # before being removed to avoid long-term memory leaks.
-    # DO NOT change this to a small value to re-enable communication with
+    # WARNING: DO NOT change this to a small value to re-enable communication with
     # quarantined nodes. Such feature is not supported and any behavior between
     # the affected systems after lifting the quarantine is undefined.
     prune-quarantine-marker-after = 5 d
@@ -474,10 +477,16 @@ akka {
 
     default-remote-dispatcher {
       type = Dispatcher
-      executor = "thread-pool-executor"
       thread-pool-executor {
         core-pool-size-min = 2
         core-pool-size-max = 2
+      }
+      executor = "fork-join-executor"
+      fork-join-executor {
+        # Min number of threads to cap factor-based parallelism number to
+        parallelism-min = 2
+        parallelism-factor = 2.0
+        parallelism-max = 2
       }
     }
 
